création html header + footer

--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 <body>
     <header>
@@ -12,7 +11,8 @@
             <a href="">Recettes</a>
             <a href="">Recherche</a>
             <a href="">Contact</a>
-            <a href=""></a> <!--logo recherche-->
+            <a href=""></a>
+                <img src="" alt="Logo de recherche">
             <a href="">Se connecter</a>
             <a href="">S'inscrire</a>
         </nav>
