--- a/frontend/templates/footer.html
+++ b/frontend/templates/footer.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 <body>
     <footer> 
-        <nav>
+        <nav class="logo_bas_de_page">
             <a href=""></a>
-                <img src="" alt="">
+                <img src="" alt="Logo Facebook">
             <a href=""></a>
-                <img src="" alt="">
+                <img src="" alt="Logo Instagram">
             <a href=""></a>
-                <img src="" alt="">
+                <img src="" alt="Logo X/Twitter">
         </nav>
-        <!--faire 4 colonnes-->
-        <h3>Présentations</h3>
-        <h3>Professionnels</h3>
-        <h3>Boutique</h3>
-        <h3>Webinaires</h3>
-        <h3>Ateliers</h3>
-        <h3>Rencontres locales</h3>
-        <h3>Nos initiatives</h3>
-        <h3>Redonner</h3>
-        <h3>Communautés</h3>
-        <h3>Formulaire de contact</h3>
-        <h3>Travailler avec nous</h3>
-        <h3>Nous rendre visite</h3>
+        <div class="titre_bas_de_page">   <!--faire 4 colonnes-->
+            <h3>Présentations</h3>
+            <h3>Professionnels</h3>
+            <h3>Boutique</h3>
+            <h3>Webinaires</h3>
+            <h3>Ateliers</h3>
+            <h3>Rencontres locales</h3>
+            <h3>Nos initiatives</h3>
+            <h3>Redonner</h3>
+            <h3>Communautés</h3>
+            <h3>Formulaire de contact</h3>
+            <h3>Travailler avec nous</h3>
+            <h3>Nous rendre visite</h3>
+        </div>  
+        <p>Fabriqué par la ville de Saint Ciers sur Gironde.</p>
     </footer>
 </body>
 </html>
