Création page html contact + js

--- a/frontend/templates/footer.html
+++ b/frontend/templates/footer.html
@@ -29,7 +29,7 @@
             <h3>Travailler avec nous</h3>
             <h3>Nous rendre visite</h3>
         </div>  
-        <p>Fabriqué par la ville de Saint Ciers sur Gironde.</p>
+        <p>Crée par la ville de Saint Ciers sur Gironde.</p>
     </footer>
 </body>
 </html>
