--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -11,7 +11,7 @@
             <a href="">Accueil</a>
             <a href="">Recettes</a>
             <a href="">Recherche</a>
-            <a href="">Contact</a>
+            <a href="contact.html">Contact</a>
             <a href=""></a>
                 <img src="" alt="Logo de recherche">
             <a href="">Se connecter</a>
