--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -14,21 +14,21 @@
             Nous nous engageons à vous répondre dans les plus brefs délais et à vous apporter toute l’aide nécessaire. 
             Remplissez le formulaire ci-contre en indiquant vos coordonnées et votre message, et nous prendrons contact avec vous rapidement. 
             Votre satisfaction est notre priorité !</p>
-            <button>Prévoir un appel</button>
+            <button type="button">Prévoir un appel</button>
     </div>
     <div class="form">
         <form action="" method="post"> <!--method post pour éviter l'affichage des données sensibles dans l'url-->
             <label for="lastname">Nom</label>
-            <input type="text" id="lastname" name="lastname" placeholder="Votre nom" maxlenght="50" aria-required> <!--donnée requise-->
+            <input type="text" id="lastname" name="lastname" placeholder="Votre nom" maxlength="50" aria-required> <!--donnée requise-->
 
             <label for="firstname">Prénom</label>
-            <input type="text" id="firstname" name="firstname" placeholder="Votre Prénom" maxlenght="50" aria-required>
+            <input type="text" id="firstname" name="firstname" placeholder="Votre prénom" maxlength="50" aria-required>
            
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" maxlenght="150" aria-required>
+            <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" maxlength="150" aria-required>
             
             <label for="message">Message :</label>
-            <textarea id="message" name="message" maxlenght="255" placeholder="Écrivez ici (max 255 caractères)" aria-required></textarea> <!--maxlenght donne un nombre de caractère max-->
+            <textarea id="message" name="message" maxlength="255" placeholder="Écrivez ici (max 255 caractères)" aria-required></textarea> <!--maxlenght donne un nombre de caractère max-->
 
             <button type="submit">Envoyer</button>
         </form>
