--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="">Accueil</a>
+            <a href="index.html">Accueil</a>
             <a href="">Recettes</a>
             <a href="">Recherche</a>
             <a href="contact.html">Contact</a>
