--- a/frontend/templates/recettes_details.html
+++ b/frontend/templates/recettes_details.html
@@ -9,8 +9,35 @@
     <div id="header"></div>
     <div id="recettes_details"></div>
 
+    <h2>Commentaires</h2>
+
+    <div id="zone_commentaire" style="display: none;">
+        <h3>Ajouter un commentaire</h3>
+        <textarea name="" id="commentaire_input" placeholder="Ecrivez votre commentaire"></textarea>
+            <div>
+                <span>Note :</span>
+                <select name="" id="note_input">
+                    <option value="" selected disabled>Choisissez une note</option>
+                    <option value="1">★☆☆☆☆</option>
+                    <option value="2">★★☆☆☆</option>
+                    <option value="3">★★★☆☆</option>
+                    <option value="4">★★★★☆</option>
+                    <option value="5">★★★★★</option>
+                </select>
+            </div>
+        <button onclick="ajoutCommentaire()">Envoyer</button>
+    </div>
+
+    <div id="connexion">
+        <input type="text" id="prenom" placeholder="Entrez votre prénom">
+        <button onclick="connexion()">Se connecter</button>
+    </div>
+        
+    <div id="commentaires"></div>
+
     <div id="footer"></div>
 
+<script src="../assets/js/commentaires.js"></script>
 <script src="../assets/js/recettes_details.js"></script>
 </body>
 </html>
