Amélioration code + commentaires

--- a/frontend/templates/recettes_details.html
+++ b/frontend/templates/recettes_details.html
@@ -28,7 +28,7 @@
         <button onclick="ajoutCommentaire()">Envoyer</button>
     </div>
 
-    <div id="connexion">
+    <div id="connexion" aria-autocomplete="off">
         <input type="text" id="prenom" placeholder="Entrez votre prénom">
         <button onclick="connexion()">Se connecter</button>
     </div>
