Terminer commentaire + modif main + recettes_details.html

--- a/frontend/templates/recettes_details.html
+++ b/frontend/templates/recettes_details.html
@@ -7,40 +7,40 @@
     <title>Recette</title>
 </head>
 <body>
-    <div id="toast"></div>
+    <div id="toast" role="status" aria-live="polite"></div>
     <div id="header"></div>
     <div id="recettes_details"></div>
 
     <h2>Commentaires</h2>
 
-    <div id="commentaires"></div>
+    <div id="commentaires" aria-live="polite"></div>
 
-    <div id="zone_commentaire" style="display: none;">
+    <form id="zone_commentaire" style="display: none;" onsubmit="event.preventDefault(); ajoutCommentaire();">
         <h3>Ajouter un commentaire</h3>
-        <textarea name="" id="commentaire_input" placeholder="Ecrivez votre commentaire" aria-required></textarea>
+
+        <label for="commentaire_input">Votre commentaire :</label>
+        <textarea id="commentaire_input" placeholder="Ecrivez votre commentaire" aria-required="true" maxlength="500"></textarea>
         <p id="char_count" class="char_count">0/500</p>
-            <div>
-                <span>Note :</span>
-                <select name="" id="note_input" aria-required>
-                    <option value="" selected disabled>Choisissez une note</option>
-                    <option value="1">★☆☆☆☆</option>
-                    <option value="2">★★☆☆☆</option>
-                    <option value="3">★★★☆☆</option>
-                    <option value="4">★★★★☆</option>
-                    <option value="5">★★★★★</option>
-                </select>
-                <span class="error" id="note_error" aria-live="assertive"></span>
-            </div>
-        <button onclick="ajoutCommentaire()">Envoyer</button>
-    </div>
+
+        <label for="note_input">Note :</label>
+        <select id="note_input" aria-required="true">
+            <option value="" selected disabled>Choisissez une note</option>
+            <option value="1">★☆☆☆☆</option>
+            <option value="2">★★☆☆☆</option>
+            <option value="3">★★★☆☆</option>
+            <option value="4">★★★★☆</option>
+            <option value="5">★★★★★</option>
+        </select>
+        <span class="error" id="note_error" aria-live="assertive"></span> <!--interruption immédiate-->
+        
+        <button type="submit">Envoyer</button>
+    </form>
 
     <div id="connexion" aria-autocomplete="off">
         <input type="text" id="prenom" placeholder="Entrez votre prénom" aria-required>
         <span class="error" id="prenom_error" aria-live="assertive"></span>
-        <button onclick="connexion()">Se connecter</button>
+        <button type="button" onclick="connexion()">Se connecter</button>
     </div>
-        
-    
 
     <div id="footer"></div>
 
