Modification html recette detail + js main

--- a/frontend/templates/recettes_details.html
+++ b/frontend/templates/recettes_details.html
@@ -47,6 +47,7 @@
     
     <div id="footer"></div>
 
+<script src="../assets/js/random.js"></script>    
 <script src="../assets/js/commentaires.js"></script>
 <script src="../assets/js/recettes_details.js"></script>
 </body>
