--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="header">
+        <nav aria-label="Navigation principale">
             <a href="index.html">Accueil</a>
             <a href="">Recettes</a>
             <a href="">Recherche</a>
             <a href="contact.html">Contact</a>
-            <a href=""></a>
-                <img src="" alt="Logo de recherche">
+            <a href="" title="Rechercher"></a><img src="" alt="Logo d'une loupe pour la recherche">
             <a href="">Se connecter</a>
             <a href="">S'inscrire</a>
         </nav>
