--- a/frontend/templates/recettes_details.html
+++ b/frontend/templates/recettes_details.html
@@ -9,7 +9,7 @@
 <body>
     <div id="toast" role="status" aria-live="polite"></div>
     <div id="header"></div>
-    <div id="recettes_details"></div>
+    <section class="headerDetails" id="recettes_details"></section>
 
     <h2>Commentaires</h2>
 
