--- a/frontend/templates/footer.html
+++ b/frontend/templates/footer.html
@@ -6,30 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <footer> 
-        <nav class="logo_bas_de_page">
-            <a href=""></a>
-                <img src="" alt="Logo Facebook">
-            <a href=""></a>
-                <img src="" alt="Logo Instagram">
-            <a href=""></a>
-                <img src="" alt="Logo X/Twitter">
+    <footer class="footer"> 
+        <nav aria-label="Liens vers les réseaux sociaux" class="logo_bas_de_page"><!--ouvrir dans un autre onglet + empêche x d’accéder à l'onglet actuel + n’envoie pas l’URL du site à x-->
+            <a href="" target="_blank" rel="noopener noreferrer" title="Lien vers Facebook"></a></a><img src="" alt="Logo Facebook"> 
+            <a href="" target="_blank" rel="noopener noreferrer" title="Lien vers Instagram"></a></a><img src="" alt="Logo Instagram">
+            <a href="" target="_blank" rel="noopener noreferrer" title="Lien vers Twitter"></a></a><img src="" alt="Logo X/Twitter">
         </nav>
-        <div class="titre_bas_de_page">   <!--faire 4 colonnes-->
-            <h3>Présentations</h3>
-            <h3>Professionnels</h3>
-            <h3>Boutique</h3>
-            <h3>Webinaires</h3>
-            <h3>Ateliers</h3>
-            <h3>Rencontres locales</h3>
-            <h3>Nos initiatives</h3>
-            <h3>Redonner</h3>
-            <h3>Communautés</h3>
-            <h3>Formulaire de contact</h3>
-            <h3>Travailler avec nous</h3>
-            <h3>Nous rendre visite</h3>
-        </div>  
-        <p>Crée par la ville de Saint Ciers sur Gironde.</p>
+        <div class="footer-columns">
+            <ul>
+                <li><a href="">Présentations</a></li>
+                <li><a href="">Professionnels</a></li>
+                <li><a href="">Boutique</a></li>
+                <li><a href="">Webinaires</a></li>
+            </ul>
+            <ul>
+                <li><a href="">Ateliers</a></li>
+                <li><a href="">Rencontres locales</a></li>
+                <li><a href="">Nos initiatives</a></li>
+                <li><a href="">Redonner</a></li>
+            </ul>
+            <ul>
+                <li><a href="">Communautés</a></li>
+                <li><a href="">Formulaire de contact</a></li>
+                <li><a href="">Travailler avec nous</a></li>
+                <li><a href="">Nous rendre visite</a></li>
+            </ul>
+        </div>
+            <p>Crée par la ville de Saint Ciers sur Gironde.</p>
     </footer>
 </body>
 </html>
