Suite accessibilité + sécurité + css

--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -7,7 +7,7 @@
     <title>Contact</title>
 </head>
 <body>
-    <div id="header"></div>
+    <header id="header"></header>
     <div class="para_form">
         <p>Vous avez une question, une suggestion ou souhaitez simplement échanger avec nous ? 
             N’hésitez pas à nous écrire ! 
@@ -34,7 +34,7 @@
         </form>
     </div>
 
-    <div id="footer"></div>
+    <footer id="footer"></footer>
 
 <script src="../assets/js/contact.js"></script>
 </body>
