Suite recherche + modification main

--- a/frontend/templates/recherche.html
+++ b/frontend/templates/recherche.html
@@ -13,7 +13,7 @@
 <div class="zone_recherche">
     <div class="barre_recherche"> <!--barre de recherche pour rechercher par mots clés-->
         <button id="btn_recherche" aria-label="Rechercher une recette">
-            <img src="assets/img/loupe.webp" height="15px" alt="Loupe de recherche">
+            <img src="../assets/img/loupe.webp" height="15px" alt="Loupe de recherche">
         </button>
         <input 
             type="text" 
