--- a/frontend/templates/recherche.html
+++ b/frontend/templates/recherche.html
@@ -32,6 +32,9 @@
 <div class="recettes" id="recettes">
     <!--Les recettes s'affichent ici-->
 </div> 
+<div id="pagination" class="pagination">
+    <!--Les boutons de pages s'affichent ici-->
+</div>
 
 
 </main>
