Avancer recherche par personnes

--- a/frontend/templates/recherche.html
+++ b/frontend/templates/recherche.html
@@ -26,6 +26,11 @@
         <select id="btn_filtre">
             <option value="recent">Récent</option>
             <option value="ancien">Anciens</option>
+            <option value="1">Pour 1 personne</option>
+            <option value="2">Pour 2 personnes</option>
+            <option value="3">Pour 3 personnes</option>
+            <option value="4">Pour 4 personnes</option>
+            <option value="plus5">+ de 5 personnes</option>
         </select>
     </div>
 </div> 
