Ajout icone onglet + modification header index

--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -8,8 +8,7 @@
 <body>
     <header class="header">
         <nav aria-label="Navigation principale">
-            <a href="index.html">Accueil</a>
-            <a href="recherche.html">Recherche</a>
+            <a href="../index.html">Accueil</a>
             <a href="contact.html">Contact</a>
             <a href="" title="Rechercher"></a><img src="" alt="Logo d'une loupe pour la recherche">
             <a href="">Se connecter</a>
