--- a/frontend/templates/recettes_details.html
+++ b/frontend/templates/recettes_details.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../assets/css/reset_modern_normalize.css">
     <link rel="stylesheet" href="../assets/css/recettes_details.css">
     <title>Recette</title>
+    <link rel="icon" href="../assets/img/poele.ico" type="image/x-icon">
 </head>
 <body>
     <!--informe les technologies d'assitance que le contenu contient des informations importantes qui changent dynamiquement-->
