--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/reset_modern_normalize.css">
     <title>Contact</title>
+    <link rel="icon" href="../assets/img/poele.ico" type="image/x-icon">
 </head>
 <body>
     <header id="header"></header>
