--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -18,18 +18,18 @@
             <button type="button">Prévoir un appel</button>
     </div>
     <div class="form">
-        <form action="" method="post"> <!--method post pour éviter l'affichage des données sensibles dans l'url-->
+        <form action="" method="POST"> <!--method post pour éviter l'affichage des données sensibles dans l'url-->
             <label for="lastname">Nom</label>
-            <input type="text" id="lastname" name="lastname" placeholder="Votre nom" maxlength="50" aria-required> <!--donnée requise-->
+            <input type="text" id="lastname" name="lastname" placeholder="Votre nom" maxlength="50" required> <!--donnée requise-->
 
             <label for="firstname">Prénom</label>
-            <input type="text" id="firstname" name="firstname" placeholder="Votre prénom" maxlength="50" aria-required>
+            <input type="text" id="firstname" name="firstname" placeholder="Votre prénom" maxlength="50" required>
            
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" maxlength="150" aria-required>
+            <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" maxlength="150" required>
             
             <label for="message">Message :</label>
-            <textarea id="message" name="message" maxlength="255" placeholder="Écrivez ici (max 255 caractères)" aria-required></textarea> <!--maxlenght donne un nombre de caractère max-->
+            <textarea id="message" name="message" maxlength="255" placeholder="Écrivez ici (max 255 caractères)" required></textarea> <!--maxlenght donne un nombre de caractère max-->
 
             <button type="submit">Envoyer</button>
         </form>
