--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -9,3 +9,9 @@
     white-space: nowrap;
     border: 0;
 }
+button.active {
+    background-color: #ff9800; /* couleur de fond */
+    color: white;               /* texte blanc */
+    border: 1px solid #ff9800;
+}
+
