--- a/frontend/templates/footer.html
+++ b/frontend/templates/footer.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/reset_modern_normalize.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
     <footer class="footer"> 
         <nav aria-label="Liens vers les réseaux sociaux" class="logo_bas_de_page"><!--ouvrir dans un autre onglet + empêche x d’accéder à l'onglet actuel + n’envoie pas l’URL du site à x-->
-            <a href="" target="_blank" rel="noopener noreferrer" title="Lien vers Facebook"></a></a><img src="" alt="Logo Facebook"> 
-            <a href="" target="_blank" rel="noopener noreferrer" title="Lien vers Instagram"></a></a><img src="" alt="Logo Instagram">
-            <a href="" target="_blank" rel="noopener noreferrer" title="Lien vers Twitter"></a></a><img src="" alt="Logo X/Twitter">
+            <a href="" target="_blank" rel="noopener noreferrer" title="Lien vers Facebook"></a>
+                <img src="../assets/img/facebook.webp" alt="Logo Facebook" class="icon"> 
+            <a href="" target="_blank" rel="noopener noreferrer" title="Lien vers Instagram"></a>
+                <img src="../assets/img/instagram.webp" alt="Logo Instagram" class="icon">
+            <a href="" target="_blank" rel="noopener noreferrer" title="Lien vers Twitter"></a>
+                <img src="../assets/img/twitter.webp" alt="Logo X/Twitter" class="icon">
         </nav>
         <div class="footer-columns">
             <ul>
