--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/reset_modern_normalize.css">
+    <link rel="icon" href="../assets/img/poele.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -12,7 +13,7 @@
             <a href="contact.html">Contact</a>
             <a href="" title="Rechercher"></a><img src="" alt="Logo d'une loupe pour la recherche">
             <a href="">Se connecter</a>
-            <a href="">S'inscrire</a>
+            <a href="inscription.html">S'inscrire</a>
         </nav>
     </header>
 </body>
