--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -14,4 +14,10 @@ button.active {
     color: white;               /* texte blanc */
     border: 1px solid #ff9800;
 }
-
+.icon {
+    height: 40px;
+    padding: 10px;
+    border-radius: 40%;
+    border-style: solid;
+    border-color: black;
+}
