--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/reset_modern_normalize.css">
     <title>Contact</title>
-    <link rel="icon" href="../assets/img/poele.ico" type="image/x-icon">
 </head>
 <body>
     <header id="header"></header>
@@ -29,7 +28,7 @@
             <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" maxlength="150" required>
             
             <label for="message">Message :</label>
-            <textarea id="message" name="message" maxlength="255" placeholder="Écrivez ici (max 255 caractères)" required></textarea> <!--maxlenght donne un nombre de caractère max-->
+            <textarea id="message" name="message" maxlength="255" placeholder="Écrivez ici (max 255 caractères)" required></textarea>
 
             <button type="submit">Envoyer</button>
         </form>
