Suite html + page connexion

--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -12,7 +12,7 @@
             <a href="../index.html">Accueil</a>
             <a href="contact.html">Contact</a>
             <a href="" title="Rechercher"></a><img src="" alt="Logo d'une loupe pour la recherche">
-            <a href="">Se connecter</a>
+            <a href="connexion.html">Se connecter</a>
             <a href="inscription.html">S'inscrire</a>
         </nav>
     </header>
