--- a/frontend/templates/connexion.html
+++ b/frontend/templates/connexion.html
@@ -10,26 +10,26 @@
 <body>
 <main>
     <section class="droite_insc">
-        <h1>S'inscrire ⤵</h1>
-        <nav aria-label="S'inscrire avec un réseau social">
-            <a href="https://www.facebook.com/?locale=fr_FR" title="S'inscrire avec Facebook" rel="noopener noreferrer" target="_blank">
+        <h1>Se connecter ⤵</h1>
+        <nav aria-label="Se connecter avec un réseau social">
+            <a href="https://www.facebook.com/?locale=fr_FR" title="Se connecter avec Facebook" rel="noopener noreferrer" target="_blank">
                 <img src="../assets/img/facebook.webp" class="icon" alt="Logo Facebook"> 
-                <span class="sr-only">S'inscrire avec Facebook</span>
+                <span class="sr-only">Se connecter avec Facebook</span>
             </a>
             <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fwww.google.com%2Fsearch%3Fclient%3Dfirefox-b-d%26q%3Dgooglr%26sei%3D4hJJacLqA7ylkdUPvrm7oAM&dsh=S923499906%3A1766396645593027&ec=futura_srp_og_si_72236_p&flowEntry=ServiceLogin&flowName=GlifWebSignIn&hl=fr&ifkv=Ac2yZaW3KqvlBnBTKCAyrZfElBKYimHjfzwkfKCacHkPeoWENUJgTC4PYWZh40M_Gvz8iCYsASPj8g" 
-            title="S'inscrire avec Google" rel="noopener noreferrer" target="_blank">
+            title="Se connecter avec Google" rel="noopener noreferrer" target="_blank">
                 <img src="../assets/img/google.webp" class="icon" alt="Logo de Google"> 
-                <span class="sr-only">S'inscrire avec Google</span>
+                <span class="sr-only">Se connecter avec Google</span>
             </a>
-            <a href="https://www.linkedin.com/home" title="S'inscrire avec Linkedin" rel="noopener noreferrer" target="_blank">
+            <a href="https://www.linkedin.com/home" title="Se connecter avec Linkedin" rel="noopener noreferrer" target="_blank">
                 <img src="../assets/img/linkedin.webp" class="icon" alt="Logo Linkedin"> 
-                <span class="sr-only">S'inscrire avec Linkedin</span>
+                <span class="sr-only">Se connecter avec Linkedin</span>
             </a>
         </nav>
         <h2>Ou utilise ton adresse email</h2>
         <div class="formInsc">
             <form action="" method="POST"> 
-                <h3 class="sr-only">Formulaire d'inscription</h3>
+                <h3 class="sr-only">Formulaire de connexion</h3>
             
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" maxlength="150" required autocomplete="email">
@@ -40,12 +40,7 @@
                 <label for="confirm_password">Confirmer le mot de passe</label>
                 <input type="password" id="confirm_password" name="confirm_password" minlength="8" required autocomplete="confirm_password">
 
-                <label for="cgu">
-                    J'accepte les conditions générales d'utilisation
-                    <input type="checkbox" id="cgu" name="cgu" required>
-                </label>
-                
-                <button type="submit">S'inscrire</button>
+                <button type="submit">Se connecter</button>
             </form>
         </div>
     </section>
@@ -53,8 +48,8 @@
         <div>
             <img src="../assets/img/cuisiniere.webp" alt="Dame qui cuisine" height="500px">
             <p>
-                Déjà un compte ?
-                <a href="connexion.html" aria-label="Aller à la page de connexion">Se connecter</a>
+                Vous êtes nouveau ?
+                <a href="inscription.html" aria-label="Aller à la page d'inscription">S'inscrire</a>
             </p>
         </div>
     </section>
