bouton loupe + js

--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -2,16 +2,18 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/reset_modern_normalize.css">
     <link rel="icon" href="../assets/img/poele.ico" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header class="header">
         <nav aria-label="Navigation principale">
             <a href="../index.html">Accueil</a>
             <a href="contact.html">Contact</a>
-            <a href="" title="Rechercher"></a><img src="" alt="Logo d'une loupe pour la recherche">
+            <button id="btn_loupe" aria-label="Rechercher une recette">
+                <img src="../assets/img/loupe.svg" alt="Logo d'une loupe pour la recherche" height="30px">
+            </button>
             <a href="connexion.html">Se connecter</a>
             <a href="inscription.html">S'inscrire</a>
         </nav>
