--- a/frontend/templates/recettes_details.html
+++ b/frontend/templates/recettes_details.html
@@ -63,5 +63,6 @@
 <script src="../assets/js/random.js"></script>    
 <script src="../assets/js/commentaires.js"></script>
 <script src="../assets/js/recettes_details.js"></script>
+<script src="../assets/js/header.js"></script>
 </body>
 </html>
