--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -37,7 +37,6 @@
     <footer id="footer"></footer>
 
 <script src="../assets/js/contact.js"></script>
+<script src="../assets/js/header.js"></script>
 </body>
 </html>
-
-
