--- a/frontend/templates/recettes_details.html
+++ b/frontend/templates/recettes_details.html
@@ -64,5 +64,6 @@
 <script src="../assets/js/commentaires.js"></script>
 <script src="../assets/js/recettes_details.js"></script>
 <script src="../assets/js/header.js"></script>
+<script src="../assets/js/toast.js"></script>
 </body>
 </html>
