--- a/frontend/templates/inscription.html
+++ b/frontend/templates/inscription.html
@@ -11,7 +11,7 @@
 <body>
 <main>
     <div id="toast" role="status"></div> 
-    <section class="droite_insc">
+    <section class="gauche_insc">
         <h1>S'inscrire ⤵</h1>
         <nav aria-label="S'inscrire avec un réseau social">
             <a href="https://www.facebook.com/?locale=fr_FR" title="S'inscrire avec Facebook" rel="noopener noreferrer" target="_blank">
@@ -52,7 +52,7 @@
             </form>
         </div>
     </section>
-    <section class="gauche_insc" aria-label="Image d'une dame qui cuisine">
+    <section class="droite_insc" aria-label="Image d'une dame qui cuisine">
         <div>
             <img src="../assets/img/cuisiniere.webp" alt="Dame qui cuisine" height="500px">
             <p>
