--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -10,8 +10,8 @@
     border: 0;
 }
 button.active {
-    background-color: #ff9800; /* couleur de fond */
-    color: white;               /* texte blanc */
+    background-color: #ff9800;
+    color: white;
     border: 1px solid #ff9800;
 }
 .icon {
