--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -8,6 +8,7 @@
     <title>Contact</title>
 </head>
 <body>
+    <div id="toast" role="status"></div>
     <header id="header"></header>
     <div class="para_form">
         <p>Vous avez une question, une suggestion ou souhaitez simplement échanger avec nous ? 
@@ -17,29 +18,34 @@
             Votre satisfaction est notre priorité !</p>
             <button type="button">Prévoir un appel</button>
     </div>
-    <div class="form">
-        <form action="" method="POST" id="form"> <!--method post pour éviter l'affichage des données sensibles dans l'url-->
-            <label for="lastname">Nom</label>
-            <input type="text" id="lastname" name="lastname" placeholder="Votre nom" maxlength="50" required> <!--donnée requise-->
-
-            <label for="firstname">Prénom</label>
-            <input type="text" id="firstname" name="firstname" placeholder="Votre prénom" maxlength="50" required>
-           
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" maxlength="150" required>
+        <div class="formContact">
+            <form action="" method="POST" id="form"> <!--method post pour éviter l'affichage des données sensibles dans l'url-->
             
-            <label for="message">Message :</label>
-            <textarea id="message" name="message" maxlength="255" placeholder="Écrivez ici (max 255 caractères)" required></textarea>
+                <label for="lastname">Nom</label>
+                <input type="text" id="lastname" name="lastname" placeholder="Votre nom" maxlength="50">
+                <div id="lastname_error" class="error-message"></div>
 
-            <label for="rgpd">
-                    Je consente au traitement des données personnelles
-                    <input type="checkbox" id="rgpd" name="rgpd" required>
+                <label for="firstname">Prénom</label>
+                <input type="text" id="firstname" name="firstname" placeholder="Votre prénom" maxlength="50">
+                <div id="firstname_error" class="error-message"></div>
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="exemple@gmail.fr" maxlength="150">
+                <div id="email_error" class="error-message"></div>
+
+                <label for="message">Message :</label>
+                <textarea id="message" name="message" maxlength="255" placeholder="Écrivez ici (max 255 caractères)"></textarea>
+                <div id="message_error" class="error-message"></div>
+                
+                <label for="rgpd">Je consente au traitement des données personnelles
+                <input type="checkbox" id="rgpd" name="rgpd">
                 </label>
-
-            <button type="submit" id="btn_contact">Envoyer</button>
-            <div id="contact_error"></div>
-        </form>
-    </div>
+                <div id="rgpd_error" class="error-message"></div>
+                
+                <button type="submit" id="btn_contact">Envoyer</button>
+                
+            </form>
+        </div>
 
     <footer id="footer"></footer>
 
